fix : update review image And add testcode (#126)